<resources>
    <string name="app_name">COVID-19 Tracker</string>
    <string name="progress_dialog_text">Getting Data...</string>
    <string name="state_text_view_label">Your State:</string>
    <string name="tested_text_view_label">Number Tested:</string>
    <string name="positive_tests_text_view_label">Number of Positive Tests:</string>
    <string name="deaths_text_view_label">Number of Deaths:</string>
    <string name="last_updated_text_view_label">Last Updated:</string>
    <string name="tested_graph_label">Number of Tests vs Positive Cases:</string>
    <string name="no_permissions_dialog_text">Location permission denied. Please grant this app access to location data in order to view COVID-19 stats.</string>
    <string name="no_location_data_dialog_message">No recent location data found. Please manually select your state from the drop down list.</string>
    <string name="no_permissions_dialog_positive_button_text">Whoops, let me take care of that</string>
    <string name="no_permissions_dialog_negative_button_text">No, thanks. I\'ll choose my state from the drop down list</string>
    <string name="no_location_data_dialog_positive_button_text">Whoops, let me take care of that</string>
    <string name="no_location_data_dialog_negative_button_text">No, thanks. I\'ll choose my state from the drop down list</string>
    <string-array name="states_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>Washington DC</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
</resources>
